# idf-im-ui

./: .gitignore  .typos.toml  CONTRIBUTING.md  MAINTENANCE.md  README.md  eim.entitlement  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: autoclose-empty-issues.yml  build-release.yaml  build.yaml  build_and_test_lib.yaml  build_cli.yaml  build_docs.yaml  build_offline_installer_archives.yaml  build_single_offline_installer_version.yml  build_tauri.yaml  cancel-old-commit-build-pr.yml  close-stale-issues.yml  create-release-pr.yml  dl_page.yaml  jira-build-artifacts-comment.yml  jira-pr-comment.yml  notify_mattermost.yml  post-release.yml  pre_check.yml  prepare-release.yml  purge_debug_offline_archives.yml  release.yml  release_into_update.sh  sync-athena.yml  sync-git-python-to-s3.yml  sync-jira.yml  test.yml  test_cache.yaml  test_cli.yml  test_gui.yml  test_offline.yml  test_pkg_managers.yml  test_purge_unsupported_archives.yml  update-homebrew-release.yml  update-homebrew.yml  update-linux-repos-release.yml  update-linux-repos.yml  update-windows-packages-release.yml  update-windows-packages.yml
dl_page/: index.html
docs/: book.toml
docs/src/: MAINTENANCE.md  SUMMARY.md  after_installing.md  before_installing.md  broken_installation.md  cli_commands.md  cli_configuration.md  cli_installation.md  configuration.md  expert_installation.md  faq.md  general_info.md  gui_configuration.md  headless_usage.md  installation_methods.md  issue_reporting.md  offline_archive_builder.md  offline_installation.md  prerequisites.md  simple_installation.md  version_management.md
docs/theme/: book.js  index.hbs
docs/theme/css/: general.css
docs_cli/book/: 404.html  configuration.html  faqs.html  index.html  installation.html  prerequisites.html  print.html  searchindex.js  searchindex.json  toc.html  toc.js
docs_cli/theme/: book.js  index.hbs
man/: eim.1
src/: App.vue  main.js  router.js  store.js
src-tauri/: .gitignore  Cargo.toml  Cross.toml  build.rs  diff  eim_config.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/bash_scripts/: activate_idf_template.fish  activate_idf_template.sh  deactivate_idf_template.fish  deactivate_idf_template.sh
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/locales/: app.yml
src-tauri/powershell_scripts/: add_to_registry_path_template.ps1  create_desktop_shortcut_template.ps1  idf_fragment_template.ps1  idf_tools_profile_deactivate_template.bat  idf_tools_profile_deactivate_template.ps1  idf_tools_profile_template.bat  idf_tools_profile_template.ps1  install_scoop_offline.ps1
src-tauri/python_scripts/sanity_check/: try_https.py
src-tauri/scoop_manifest_templates/: 7zip.json  dark.json  git.json  python310.json  python311.json
src-tauri/src/: lib.rs  main.rs  offline_installer.rs  offline_installer_builder.rs  tauri.rs
src-tauri/src/cli/: cli_args.rs  helpers.rs  idf_tools.rs  mod.rs  prompts.rs  wizard.rs
src-tauri/src/gui/: app_state.rs  mod.rs  ui.rs  utils.rs
src-tauri/src/gui/commands/: idf_tools.rs  installation.rs  mod.rs  prequisites.rs  settings.rs  utils_commands.rs  version_management.rs
src-tauri/src/gui/commands/installation/: common.rs  mod.rs  offline.rs  online.rs  platform.rs  progress.rs  repair.rs
src-tauri/src/lib/: command_executor.rs  git_tools.rs  idf_components.rs  idf_config.rs  idf_features.rs  idf_tools.rs  idf_versions.rs  logging.rs  mod.rs  offline_installer.rs  python_utils.rs  settings.rs  system_dependencies.rs  telemetry.rs  tool_selection.rs  utils.rs  version_manager.rs
src-tauri/src/shared/: mod.rs  python_checks_i18n.rs
src-tauri/wix/: fragment.wxs  main.wxs
src/assets/: main.css
src/components/: AppFooter.vue  BasicInstaller.vue  CheckResultsList.vue  GlobalProgress.vue  Greet.vue  IncompleteInstallationsNotification.vue  LoadConfig.vue  LogLink.vue  MessageDisplay.vue  OfflineInstaller.vue  SimpleInstallatioProgressWrapper.vue  SimpleSetup.vue  UpdateNotification.vue  VersionManagement.vue  WarningBanner.vue  Welcome.vue  WizardStep.vue
src/locales/: cn.json  en.json  zh.json
tests/: CLIRunner.test.js  GUIRunner.test.js  README.md  config.js  eim_config.toml  helper.js  network_isolate.ps1  network_isolate.sh  offlineRunner.test.js  package-lock.json  package.json  run_test.ps1  run_test.sh  verificationRunner.test.js
tests/classes/: CLITestRunner.class.js  GUITestRunner.class.js  TestProxy.class.js  USAGE.md  logger.class.js  tauriRunner.class.js  testProxy.class.js
tests/helpers/: i18n.js
tests/runs/: testRun.test.js
tests/scripts/: CLIArguments.test.js  CLICloneIDFRepo.test.js  CLICustomInstall.test.js  CLIDeactivation.test.js  CLIExistingGitRepoClonedInstalled.test.js  CLIInstallationStatus.test.js  CLIListFeatures.test.js  CLIListTools.test.js  CLIPkgManagerInstall.test.js  CLIPrerequisites.test.js  CLIPythonCheck.test.js  CLIVersionManagement.test.js  CLIWizardInstall.test.js  GUIAfterInstall.test.js  GUICustomInstall.test.js  GUIIncompleteInstallations.test.js  GUIOfflineInstall.test.js  GUIPrerequisite.test.js  GUIPythonCheck.test.js  GUISimplifiedInstall.test.js  GUIStartup.test.js  GUIVersionManagement.test.js  cleanUpRunner.test.js  customInstall.test.js  defaultInstall.test.js  expertInstall.test.js  installationVerification.test.js  postInstall.test.js  prerequisitesInstall.test.js  prerequisitesInstallRunner.test.js  startup.test.js
tests/suites/: CLI-GUI-basic-win.json  CLI-GUI-basic.json  CLI-basic.json  CLI-deactivation.json  CLI-existing-repo-cloned-git.json  CLI-extended.json  CLI-installation-status.json  CLI-listfeatures.json  CLI-listtools.json  CLI-mirrors-basic.json  CLI-mirrors-extended.json  CLI-mirrors.json  CLI-offline.json  CLI-pkg-brew.json  CLI-pkg-deb.json  CLI-pkg-rpm.json  CLI-pkg-scoop.json  CLI-pkg-winget.json  CLI-prerequisites.json  CLI-pythoncheck.json  CLI-scoop-windows.json  CLI-test.json  GUI-basic.json  GUI-extended.json  GUI-incomplete-installations.json  GUI-prerequisites.json  GUI-pythoncheck.json  GUI-simplified-windows-d-drive.json
(+20 files in other folders)
