[package]
name = "eim"
version = "0.5.5"
description = "ESP-IDF Installation Manager"
authors = ["petr.gadorek@espressif.com"]
edition = "2021"
copyright = "Copyright © 2025 Espressif Systems. All rights reserved."
default-run = "eim"

[package.metadata.deb]
name = "eim-cli"
section = "devel"
maintainer = "Espressif Systems"
copyright = "2025, Espressif Systems"
extended-description = """\
The ESP-IDF Installation Manager (EIM) is a unified tool that simplifies
the setup process for ESP-IDF and integrated development environments (IDEs)
across multiple platforms. This package contains the command-line interface."""
license-file = ["../LICENSE"]
depends = "git, wget, flex, bison, gperf, ccache, libffi-dev, libssl-dev, dfu-util, libusb-1.0-0, libgcrypt20, libglib2.0-0, libpixman-1-0, libsdl2-2.0-0, libslirp0, python3 (>= 3.9), python3 (<< 3.14)"
assets = [
    ["target/release/eim", "usr/bin/", "755"],
    ["../README.md", "usr/share/doc/eim-cli/", "644"],
    ["../LICENSE", "usr/share/doc/eim-cli/", "644"],
    ["../man/eim.1", "usr/share/man/man1/", "644"],
]

[features]
default = ["gui", "cli", "vendored-openssl"]
gui = ["dep:tauri", "dep:tauri-build", "dep:tauri-plugin-shell", "dep:tauri-plugin-dialog", "dep:tauri-plugin-log", "dep:num_cpus", "dep:tauri-plugin-store", "dep:tauri-plugin-opener"]
cli = ["dep:clap", "dep:dialoguer", "dep:indicatif", "dep:console", "dep:log4rs", "vendored-openssl"]
offline = ["cli", "dep:fs_extra"]
userustpython = ["dep:rustpython-vm", "dep:rustpython-stdlib"]
vendored-openssl = ["openssl-sys/vendored", "reqwest/native-tls-vendored"]

[lib]
name = "idf_im_lib"
path = "src/lib/mod.rs"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "eim"
path = "src/main.rs"

[[bin]]
name = "offline_installer_builder"
path = "src/offline_installer_builder.rs"
required-features = ["offline"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [], optional = true }

[dependencies]
reqwest = "0.12.4"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
git2 = { version = "0.19.0", features = ["vendored-libgit2"] }
sha2 = "0.10.8"
log = "0.4.21"
dirs = "6.0.0"
tera = "1.20.0"
config = "0.15.13"
toml = "0.9.5"
uuid = {version="1.10.0", features = ["v4"] }
tempfile = "3.2"
anyhow = "^1.0"
rust_search = "2.1.0"
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
tar = { version = "0.4", default-features = false }
zip = { version = "2.2.2", default-features = true }
lzma-rs = "0.3.0"
thiserror = "1.0"
rust-i18n = "3.0.1"
tokio = { version = "1.41.0", features = ["full"] }
deranged = "=0.4.0"
struct_iterable = "0.1.1"
regex = "1.11.1"
shlex = "1.3.0"
zstd = "0.13.3"
chrono = { version = "0.4.42", default-features = false, features = ["serde", "clock"] }
once_cell = "1.21.3"
idf-env = { git = "https://github.com/espressif/idf-env", rev="fd69ab4f550ef35647bb32d1584caa6623cbfc4e" }
fs_extra = { version = "1.3.0", optional = true }
lnk = "0.6.3"


# GUI-related dependencies (optional)
tauri = { version = "2.7.0", features = [], optional = true }
tauri-plugin-shell = { version = "2.3.0", optional = true }
tauri-plugin-dialog = { version = "2.3.2", optional = true }
tauri-plugin-log = { version = "2.6.0", optional = true }
num_cpus =  {version = "1.17.0", optional = true }
tauri-plugin-store = { version="2.0.0", optional = true }
tauri-plugin-opener = { version="2.5.0", optional = true }

# CLI-related dependencies
clap = {version = "4.5", features = ["cargo", "derive", "color"], optional = true}
dialoguer = { git = "https://github.com/Hahihula/dialoguer.git", branch = "folder-select", features = ["folder-select"], optional = true }
indicatif = { version = "0.17.8", optional = true }
console = { version = "0.15.8", optional = true }
log4rs = { version = "1.3.0", optional = true }


# userustpython feature dependencies
rustpython-vm = { git = "https://github.com/Hahihula/RustPython.git", branch = "test-rust-build", features = ["freeze-stdlib"], optional = true }
rustpython-stdlib = { git = "https://github.com/Hahihula/RustPython.git", branch = "test-rust-build", features = ["ssl-vendor"], optional = true }
os_info = "3.12.0"




# OS-specific dependency
[target.'cfg(target_os = "linux")'.dependencies]
fork = "0.1"

[dependencies.openssl-sys]
version = "0.9.0"

[dependencies.libz-sys]
version = "1.1"
features = ["static"]

[target.'cfg(target_os = "windows")'.dependencies.openssl-sys]
version = "0.9.0"
features = ["vendored"]

[target.'cfg(target_os = "windows")'.dependencies.reqwest]
version = "0.12.4"
default-features = false
features = ["native-tls"]

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["wincon", "consoleapi", "processenv", "winbase", "handleapi", "processthreadsapi", "securitybaseapi", "winnt"] }

