[package]
name = "eim"
version = "0.8.0"
description = "ESP-IDF Installation Manager"
authors = ["petr.gadorek@espressif.com"]
edition = "2021"
copyright = "Copyright © 2025 Espressif Systems. All rights reserved."
default-run = "eim"

[package.metadata.deb]
name = "eim-cli"
section = "devel"
maintainer = "Espressif Systems"
copyright = "2025, Espressif Systems"
extended-description = """\
The ESP-IDF Installation Manager (EIM) is a unified tool that simplifies
the setup process for ESP-IDF and integrated development environments (IDEs)
across multiple platforms. This package contains the command-line interface."""
license-file = ["../LICENSE"]
depends = "git, wget, flex, cmake, bison, gperf, ccache, libffi-dev, libssl-dev, dfu-util, libusb-1.0-0, python3 (>= 3.10)"
assets = [
    ["target/release/eim", "usr/bin/", "755"],
    ["../README.md", "usr/share/doc/eim-cli/", "644"],
    ["../LICENSE", "usr/share/doc/eim-cli/", "644"],
    ["../man/eim.1", "usr/share/man/man1/", "644"],

    # Shell completions
    ["target/release/completions/eim.bash", "usr/share/bash-completion/completions/eim", "644"],
    ["target/release/completions/_eim",     "usr/share/zsh/site-functions/_eim", "644"],
    ["target/release/completions/eim.fish", "usr/share/fish/vendor_completions.d/eim.fish", "644"],
    ["target/release/completions/eim.elv", "usr/share/elvish/site-functions/eim.elv", "644"],
]

[package.metadata.generate-rpm]
name = "eim-cli"
summary = "ESP-IDF Installation Manager CLI"
license = "MIT"
assets = [
    { source = "target/release/eim", dest = "/usr/bin/eim", mode = "755" },
    { source = "../README.md", dest = "/usr/share/doc/eim-cli/README.md", mode = "644", doc = true },
    { source = "../LICENSE", dest = "/usr/share/doc/eim-cli/LICENSE", mode = "644", doc = true },
    { source = "../man/eim.1", dest = "/usr/share/man/man1/eim.1", mode = "644", doc = true },

    # Shell completions
    { source = "target/release/completions/eim.bash", dest = "/usr/share/bash-completion/completions/eim", mode = "644" },
    { source = "target/release/completions/_eim", dest = "/usr/share/zsh/site-functions/_eim", mode = "644" },
    { source = "target/release/completions/eim.fish", dest = "/usr/share/fish/vendor_completions.d/eim.fish", mode = "644" },
    { source = "target/release/completions/eim.elv", dest = "/usr/share/elvish/site-functions/eim.elv", mode = "644" },

]

[package.metadata.generate-rpm.requires]
git = "*"
wget = "*"
flex = "*"
cmake = "*"
bison = "*"
gperf = "*"
ccache = "*"
libffi-devel = "*"
openssl-devel = "*"
dfu-util = "*"
libusb = "*"
python3 = ">= 3.10"

[features]
default = ["gui", "cli", "vendored-openssl"]
gui = ["dep:tauri", "dep:tauri-build", "dep:tauri-plugin-shell", "dep:tauri-plugin-dialog", "dep:tauri-plugin-log", "dep:tauri-plugin-store", "dep:tauri-plugin-opener"]
cli = ["dep:clap", "dep:clap_complete", "dep:dialoguer", "dep:indicatif", "dep:console", "vendored-openssl"]
offline = ["cli", "dep:fs_extra"]
userustpython = ["dep:rustpython-vm", "dep:rustpython-stdlib"]
vendored-openssl = ["openssl-sys/vendored", "reqwest/native-tls-vendored"]

[lib]
name = "idf_im_lib"
path = "src/lib/mod.rs"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "eim"
path = "src/main.rs"

[[bin]]
name = "offline_installer_builder"
path = "src/offline_installer_builder.rs"
required-features = ["offline"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [], optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dependencies]
reqwest = {version = "0.12.4", features = ["json", "blocking", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
gix = { version = "0.77", default-features = false, features = [
    "blocking-network-client",
    "blocking-http-transport-reqwest-rust-tls",
    "worktree-mutation",
    "attributes",
    "max-control"
] }
sha2 = "0.10.8"
log = "0.4.21"
dirs = "6.0.0"
tera = "1.20.0"
config = "0.15.13"
toml = "0.9.5"
uuid = {version="1.10.0", features = ["v4"] }
tempfile = "3.2"
anyhow = "^1.0"
rust_search = "2.1.0"
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
tar = { version = "0.4", default-features = false }
zip = { version = "2.2.2", default-features = true }
xz2 = { version = "0.1.6", features = ["static"] }
thiserror = "1.0"
rust-i18n = "3.0.1"
tokio = { version = "1.41.0", features = ["full"] }
deranged = "=0.4.0"
struct_iterable = "0.1.1"
regex = "1.11.1"
shlex = "1.3.0"
zstd = "0.13.3"
chrono = { version = "0.4.42", default-features = false, features = ["serde", "clock"] }
once_cell = "1.21.3"
idf-env = { git = "https://github.com/espressif/idf-env", rev="fd69ab4f550ef35647bb32d1584caa6623cbfc4e" }
fs_extra = { version = "1.3.0", optional = true }
lnk = "0.6.3"
url = "2.5.7"
fern = "0.7.1"
semver = "1.0.27"
sysinfo = "0.38.0"
libc = "0.2.180"

# GUI-related dependencies (optional)
tauri = { version = "2.7.0", features = [], optional = true }
tauri-plugin-shell = { version = "2.3.0", optional = true }
tauri-plugin-dialog = { version = "2.3.2", optional = true }
tauri-plugin-log = { version = "2.6.0", optional = true }
tauri-plugin-store = { version="2.0.0", optional = true }
tauri-plugin-opener = { version="2.5.0", optional = true }

# CLI-related dependencies
clap = {version = "4.5", features = ["cargo", "derive", "color"], optional = true}
clap_complete = {version = "4.5.58", optional = true}
dialoguer = { git = "https://github.com/Hahihula/dialoguer.git", branch = "folder-select", features = ["folder-select"], optional = true }
indicatif = { version = "0.17.8", optional = true }
console = { version = "0.15.8", optional = true }
log4rs = { version = "1.3.0", optional = true }


# userustpython feature dependencies
rustpython-vm = { git = "https://github.com/Hahihula/RustPython.git", branch = "test-rust-build", features = ["freeze-stdlib"], optional = true }
rustpython-stdlib = { git = "https://github.com/Hahihula/RustPython.git", branch = "test-rust-build", features = ["ssl-vendor"], optional = true }





# OS-specific dependency
[target.'cfg(target_os = "linux")'.dependencies]
fork = "0.1"

[dependencies.openssl-sys]
version = "0.9.0"

[dependencies.libz-sys]
version = "1.1"
features = ["static"]

[target.'cfg(target_os = "windows")'.dependencies.openssl-sys]
version = "0.9.0"
features = ["vendored"]

[target.'cfg(target_os = "windows")'.dependencies.reqwest]
version = "0.12.4"
default-features = false
features = ["native-tls"]

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["wincon", "consoleapi", "processenv", "winbase", "handleapi", "processthreadsapi", "securitybaseapi", "winnt"] }

